工作日志显示

--- a/tp5/application/index/view/index/zhuye.html
+++ b/tp5/application/index/view/index/zhuye.html
@@ -344,8 +344,8 @@ document.getElementById("info2").innerHTML=date;
 								<!-- Events list -->
 								<div class="agenda-events agenda-day1">
 
-									<span class="agenda-event anthracite-gradient from-16 to-17-30">
-										<time>4 PM - 5:30 PM</time>
+									<span class="agenda-event anthracite-gradient from{$timestart} to{$timeend}">
+										<time>{$time}</time>
 										Event description
 									</span>
 
