--- a/tp5/application/index/view/index/login.html
+++ b/tp5/application/index/view/index/login.html
@@ -21,8 +21,8 @@
             .form-signin {
                 max-width: 300px;
                 padding: 19px 29px 29px;
-                margin: 0 auto 20px;
-                margin-right: 205px;
+                margin: 100px auto 20px;
+                margin-right: 400px;
                 background-color: #fff;
                 border: 1px solid #e5e5e5;
                 -webkit-border-radius: 5px;
