--- a/tp5/application/index/view/index/agenda.html
+++ b/tp5/application/index/view/index/agenda.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Developr</title>
+	<title>无纸化办公</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -93,255 +93,6 @@
 
 		<div class="with-padding">
 
-			<div class="columns">
-
-				<div class="six-columns twelve-columns-tablet">
-
-					<h3 class="thin">Simple agenda</h3>
-					<p>This is the basic style, with only one day and no header.</p>
-
-					<div class="agenda">
-
-						<!-- Time markers -->
-						<ul class="agenda-time">
-							<li class="from-7 to-8"><span>7 AM</span></li>
-							<li class="from-8 to-9"><span>8 AM</span></li>
-							<li class="from-9 to-10"><span>9 AM</span></li>
-							<li class="from-10 to-11"><span>10 AM</span></li>
-							<li class="from-11 to-12"><span>11 AM</span></li>
-							<li class="from-12 to-13"><span>12 AM</span></li>
-							<li class="from-13 to-14"><span>1 PM</span></li>
-							<li class="from-14 to-15"><span>2 PM</span></li>
-							<li class="from-15 to-16"><span>3 PM</span></li>
-							<li class="from-16 to-17"><span>4 PM</span></li>
-							<li class="from-17 to-18"><span>5 PM</span></li>
-							<li class="from-18 to-19"><span>6 PM</span></li>
-							<li class="from-19 to-20"><span>7 PM</span></li>
-							<li class="at-20"><span>8 PM</span></li>
-						</ul>
-
-						<!-- Events list -->
-						<div class="agenda-events">
-
-							<a href="#" class="agenda-event from-7 to-10">
-								<time>7 AM - 10 AM</time>
-								Event description
-							</a>
-
-							<span class="agenda-event from-14 to-17 anthracite-gradient">
-								<time>2 PM - 5 PM</time>
-								Event description
-							</span>
-
-						</div>
-
-					</div>
-
-				</div>
-
-				<div class="six-columns twelve-columns-tablet">
-
-					<h3 class="thin">Advanced agenda</h3>
-					<p>Complete agenda with header and days browsing.</p>
-
-					<div class="agenda with-header auto-scroll" data-agenda-options='{"auto":false,"first":1}'>
-
-						<!-- Time markers -->
-						<ul class="agenda-time">
-							<li class="from-7 to-8"><span>7 AM</span></li>
-							<li class="from-8 to-9"><span>8 AM</span></li>
-							<li class="from-9 to-10"><span>9 AM</span></li>
-							<li class="from-10 to-11"><span>10 AM</span></li>
-							<li class="from-11 to-12"><span>11 AM</span></li>
-							<li class="from-12 to-13 blue"><span>NOON</span></li>
-							<li class="from-13 to-14"><span>1 PM</span></li>
-							<li class="from-14 to-15"><span>2 PM</span></li>
-							<li class="from-15 to-16"><span>3 PM</span></li>
-							<li class="from-16 to-17"><span>4 PM</span></li>
-							<li class="from-17 to-18"><span>5 PM</span></li>
-							<li class="from-18 to-19"><span>6 PM</span></li>
-							<li class="from-19 to-20"><span>7 PM</span></li>
-							<li class="at-20"><span>8 PM</span></li>
-						</ul>
-
-						<!-- Columns wrapper -->
-						<div class="agenda-wrapper">
-
-							<!-- Events list -->
-							<div class="agenda-events agenda-day1">
-
-								<div class="agenda-header">
-									Sunday
-								</div>
-
-								<span class="agenda-event anthracite-gradient from-16 to-17-30">
-									<time>4 PM - 5:30 PM</time>
-									Event description
-								</span>
-
-							</div>
-
-							<!-- Events list -->
-							<div class="agenda-events agenda-day2">
-
-								<div class="agenda-header">
-									Monday
-								</div>
-
-								<div class="dark-stripes from-12 to-14"></div>
-
-								<a href="#" class="agenda-event from-before to-9">
-									<time>5 AM - 9 AM</time>
-									Event description
-								</a>
-
-								<span class="agenda-event from-10 to-11-30 event-1-on-2">
-									<time>10 AM - 11:30 AM</time>
-									Event description
-									<span class="ribbon tiny"><span class="ribbon-inner red-gradient">High</span></span>
-								</span>
-
-								<span class="agenda-event from-11 to-13 event-2-on-2 anthracite-gradient">
-									<time>11 AM - 1 PM</time>
-									Event description
-								</span>
-
-								<span class="agenda-event from-16 to-17-30 event-1-on-3">
-									<time>4 PM - 5:30 PM</time>
-									Event description
-								</span>
-
-								<span class="agenda-event from-16-30 to-17-30 event-2-on-3 anthracite-gradient">
-									<time>4:30 PM - 5:30 PM</time>
-									Event description
-								</span>
-
-								<span class="agenda-event from-17 to-19-30 event-3-on-3 blue-gradient">
-									<time>5 PM - 7:30 PM</time>
-									Event description
-								</span>
-
-								<div class="agenda-now" style="top:63.75%"><span>03:23</span></div>
-
-							</div>
-
-							<!-- Events list -->
-							<div class="agenda-events agenda-day3">
-
-								<div class="agenda-header">
-									Tuesday
-								</div>
-
-								<div class="dark-stripes from-12 to-18"></div>
-
-								<a href="#" class="agenda-event from-7 to-9">
-									<time>7 AM - 9 AM</time>
-									Event description
-									<span class="ribbon tiny"><span class="ribbon-inner orange-gradient">Priv</span></span>
-								</a>
-
-								<span class="agenda-event from-10 to-11-30 event-1-on-2">
-									<time>10 AM - 11:30 AM</time>
-									Event description
-								</span>
-
-								<span class="agenda-event from-11 to-13 event-2-on-2 anthracite-gradient">
-									<time>11 AM - 1 PM</time>
-									Event description
-								</span>
-
-							</div>
-
-							<!-- Events list -->
-							<div class="agenda-events agenda-day4">
-
-								<div class="agenda-header">
-									Wednesday
-								</div>
-
-								<div class="dark-stripes from-12 to-14"></div>
-
-								<a href="#" class="agenda-event from-9 to-10">
-									<time>9 AM - 10 AM</time>
-									Event description
-								</a>
-
-								<span class="agenda-event from-16 to-17-30 event-1-on-2">
-									<time>4 PM - 5:30 PM</time>
-									Event description
-								</span>
-
-								<span class="agenda-event from-17 to-19-30 event-2-on-2 blue-gradient">
-									<time>5 PM - 7:30 PM</time>
-									Event description
-								</span>
-
-							</div>
-
-							<!-- Events list -->
-							<div class="agenda-events agenda-day5">
-
-								<div class="agenda-header">
-									Thursday
-								</div>
-
-								<div class="dark-stripes from-12 to-14"></div>
-
-								<a href="#" class="agenda-event from-8 to-9">
-									<time>8 AM - 9 AM</time>
-									Event description
-								</a>
-
-								<span class="agenda-event from-11 to-13 anthracite-gradient">
-									<time>11 AM - 1 PM</time>
-									Event description
-								</span>
-
-								<span class="agenda-event from-17 to-19-30 blue-gradient">
-									<time>5 PM - 7:30 PM</time>
-									Event description
-								</span>
-
-							</div>
-
-							<!-- Events list -->
-							<div class="agenda-events agenda-day6">
-
-								<div class="agenda-header">
-									Friday
-								</div>
-
-								<div class="dark-stripes from-12 to-14"></div>
-
-								<span class="agenda-event from-10 to-13 anthracite-gradient">
-									<time>10 AM - 1 PM</time>
-									Event description
-								</span>
-
-								<span class="agenda-event from-16 to-18-30">
-									<time>4 PM - 6:30 PM</time>
-									Event description
-								</span>
-
-							</div>
-
-							<!-- Events list -->
-							<div class="agenda-events agenda-day7">
-
-								<div class="agenda-header">
-									Saturday
-								</div>
-
-							</div>
-
-						</div>
-
-					</div>
-
-				</div>
-
-			</div>
-
 			<h3 class="thin">Weekly agenda</h3>
 
 			<p>Wonder how it looks on smaller screens? Try resizing your browser!</p>
@@ -376,10 +127,12 @@
 							Sunday
 						</div>
 
-						<span class="agenda-event anthracite-gradient from-16 to-17-30">
-							<time>4 PM - 5:30 PM</time>
-							Event description
-						</span>
+						{volist name="resultday1" id="vo"}
+										<span class="{$vo['status']} from{$vo['timestart']} to{$vo['timeend']}">
+										<time>{$vo['timeprocess']}</time>
+										{$vo['thing']}
+										</span>				
+						{/volist}
 
 					</div>
 
@@ -390,19 +143,12 @@
 							Monday
 						</div>
 
-						<div class="dark-stripes from-12 to-14"></div>
-
-						<a href="#" class="agenda-event from-8 to-11">
-							<time>8 AM - 11 AM</time>
-							Event description
-						</a>
-
-						<span class="agenda-event from-16-30 to-17-30">
-							<time>4:30 PM - 5:30 PM</time>
-							Event description
-						</span>
-
-						<div class="agenda-now" style="top:63.75%"><span>03:23</span></div>
+						{volist name="resultday2" id="vo"}
+										<span class="{$vo['status']} from{$vo['timestart']} to{$vo['timeend']}">
+										<time>{$vo['timeprocess']}</time>
+										{$vo['thing']}
+										</span>				
+						{/volist}
 
 					</div>
 
@@ -413,23 +159,12 @@
 							Tuesday
 						</div>
 
-						<div class="dark-stripes from-12 to-18"></div>
-
-						<a href="#" class="agenda-event from-7 to-9">
-							<time>7 AM - 9 AM</time>
-							Event description
-							<span class="ribbon tiny"><span class="ribbon-inner orange-gradient">Priv</span></span>
-						</a>
-
-						<span class="agenda-event from-10 to-11-30 event-1-on-2">
-							<time>10 AM - 11:30 AM</time>
-							Event description
-						</span>
-
-						<span class="agenda-event from-11 to-13 event-2-on-2 anthracite-gradient">
-							<time>11 AM - 1 PM</time>
-							Event description
-						</span>
+						{volist name="resultday3" id="vo"}
+										<span class="{$vo['status']} from{$vo['timestart']} to{$vo['timeend']}">
+										<time>{$vo['timeprocess']}</time>
+										{$vo['thing']}
+										</span>				
+						{/volist}
 
 					</div>
 
@@ -440,22 +175,13 @@
 							Wednesday
 						</div>
 
-						<div class="dark-stripes from-12 to-14"></div>
+						{volist name="resultday4" id="vo"}
+										<span class="{$vo['status']} from{$vo['timestart']} to{$vo['timeend']}">
+										<time>{$vo['timeprocess']}</time>
+										{$vo['thing']}
+										</span>				
+						{/volist}
 
-						<a href="#" class="agenda-event from-9 to-10">
-							<time>9 AM - 10 AM</time>
-							Event description
-						</a>
-
-						<span class="agenda-event from-16 to-17-30 event-1-on-2">
-							<time>4 PM - 5:30 PM</time>
-							Event description
-						</span>
-
-						<span class="agenda-event from-17 to-19-30 event-2-on-2 blue-gradient">
-							<time>5 PM - 7:30 PM</time>
-							Event description
-						</span>
 
 					</div>
 
@@ -466,22 +192,12 @@
 							Thursday
 						</div>
 
-						<div class="dark-stripes from-12 to-14"></div>
-
-						<a href="#" class="agenda-event from-8 to-9">
-							<time>8 AM - 9 AM</time>
-							Event description
-						</a>
-
-						<span class="agenda-event from-11 to-13 anthracite-gradient">
-							<time>11 AM - 1 PM</time>
-							Event description
-						</span>
-
-						<span class="agenda-event from-17 to-19-30 blue-gradient">
-							<time>5 PM - 7:30 PM</time>
-							Event description
-						</span>
+						{volist name="resultday5" id="vo"}
+										<span class="{$vo['status']} from{$vo['timestart']} to{$vo['timeend']}">
+										<time>{$vo['timeprocess']}</time>
+										{$vo['thing']}
+										</span>				
+						{/volist}
 
 					</div>
 
@@ -492,17 +208,12 @@
 							Friday
 						</div>
 
-						<div class="dark-stripes from-12 to-14"></div>
-
-						<span class="agenda-event from-10 to-13 anthracite-gradient">
-							<time>10 AM - 1 PM</time>
-							Event description
-						</span>
-
-						<span class="agenda-event from-16 to-18-30">
-							<time>4 PM - 6:30 PM</time>
-							Event description
-						</span>
+						{volist name="resultday6" id="vo"}
+										<span class="{$vo['status']} from{$vo['timestart']} to{$vo['timeend']}">
+										<time>{$vo['timeprocess']}</time>
+										{$vo['thing']}
+										</span>				
+						{/volist}
 
 					</div>
 
@@ -513,6 +224,12 @@
 							Saturday
 						</div>
 
+						{volist name="resultday7" id="vo"}
+										<span class="{$vo['status']} from{$vo['timestart']} to{$vo['timeend']}">
+										<time>{$vo['timeprocess']}</time>
+										{$vo['thing']}
+										</span>				
+						{/volist}
 					</div>
 
 				</div>
@@ -549,7 +266,7 @@
 			<div id="profile">
 				<img src="__PUBLIC__/img/user.png" width="64" height="64" alt="User name" class="user-icon">
 				Hello
-				<span class="name">John <b>Doe</b></span>
+				<span class="name">{$name}</b></span>
 			</div>
 
 			<!-- By default, this section is made for 4 icons, see the doc to learn how to change this, in "basic markup explained" -->
