--- a/tp5/application/index/view/index/message.html
+++ b/tp5/application/index/view/index/message.html
@@ -10,7 +10,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Developr</title>
+	<title>无纸化办公</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -114,167 +114,62 @@
 								<li class="big-menu grey-gradient with-right-arrow">
 									<span><span class="list-count">5</span>Clients</span>
 									<ul class="message-menu">
-										<li>
+										{volist name="resultcli" id="vo"}
+											<li class="message-menu">
 											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
+												{if condition="$vo.isstarck == 0 "} 
+													<a href="#" class="unstarred" title="Not starred">Not starred</a>
+												{else /} 
+													<a href="#" class="starred" title="Starred">Starred</a>
+												{/if}
+												
+												{if condition="$vo.isread == 0 "} 
+													<a></a>
+												{else /} 
+													<a href="#" class="new-message" title="Mark as read">New</a>
+												{/if}
+												
 											</span>
 											<span class="message-info">
-												<span class="blue">Mar 5</span>
+												<span class="blue">{$vo.mtime}</span>
 											</span>
 											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">May Starck</strong><br>
-												Message subject
+												<strong class="blue">{$vo.msend}</strong><br>
+												{$vo.mtitle}
 											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Feb 21</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">John Doe</strong><br>
-												Other subject
-											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Feb 15</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">John Doe</strong><br>
-												<b>Re:</b> replied message
-											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Feb 5</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">May Starck</strong><br>
-												Another subject
-											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Jan 28</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">May Starck</strong><br>
-												Old subject
-											</a>
-										</li>
+											</li>
+										{/volist}	
 									</ul>
 								</li>
 								<li class="big-menu grey-gradient with-right-arrow">
 									<span><span class="list-count">8</span>Friends</span>
 									<ul class="message-menu">
-										<li>
+										
+										{volist name="resultcli" id="vo"}
+											<li class="message-menu">
 											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
+												{if condition="$vo.isstarck == 0 "} 
+													<a href="#" class="unstarred" title="Not starred">Not starred</a>
+												{else /} 
+													<a href="#" class="starred" title="Starred">Starred</a>
+												{/if}
+												
+												{if condition="$vo.isread == 0 "} 
+													<a></a>
+												{else /} 
+													<a href="#" class="new-message" title="Mark as read">New</a>
+												{/if}
+												
 											</span>
 											<span class="message-info">
-												<span class="blue">Mar 5</span>
+												<span class="blue">{$vo.mtime}</span>
 											</span>
 											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">May Starck</strong><br>
-												Message subject
+												<strong class="blue">{$vo.msend}</strong><br>
+												{$vo.mtitle}
 											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Feb 21</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">John Doe</strong><br>
-												Other subject
-											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Feb 15</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">John Doe</strong><br>
-												<b>Re:</b> replied message
-											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Feb 5</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">May Starck</strong><br>
-												Another subject
-											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Jan 28</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">May Starck</strong><br>
-												Old subject
-											</a>
-										</li>
-										<li>
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Mar 5</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">May Starck</strong><br>
-												Message subject
-											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Feb 21</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">John Doe</strong><br>
-												Other subject
-											</a>
-										</li>
-										<li class="message-menu">
-											<span class="message-status">
-												<a href="#" class="unstarred" title="Not starred">Not starred</a>
-											</span>
-											<span class="message-info">
-												<span class="blue">Feb 15</span>
-											</span>
-											<a href="ajax-demo/inbox-message.html" title="Read message">
-												<strong class="blue">John Doe</strong><br>
-												<b>Re:</b> replied message
-											</a>
-										</li>
+											</li>
+										{/volist}		
 									</ul>
 								</li>
 								<li class="message-menu">
@@ -336,8 +231,8 @@
 
 					<div class="panel-load-target scrollable with-padding" style="height:450px">
 
-						<h2 class="thin mid-margin-bottom">Message subject</h2>
-						<h4 class="no-margin-top">From: John Doe</h4>
+						<h2 class="thin mid-margin-bottom">{$vo.mtitle}</h2>
+						<h4 class="no-margin-top">{$vo.msend}</h4>
 
 						<div class="large-box-shadow white-gradient with-border">
 
@@ -355,17 +250,7 @@
 							</div>
 
 							<div class="with-padding">
-								<p>Hello,</p>
-
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-
-								<p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</p>
-
-								<p>Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-
-								<p>Best regards,</p>
-
-								<p>John</p>
+								{$vo.mthing}
 
 								<div class="left-border grey">
 									<p>Hello,</p>
@@ -420,7 +305,7 @@
 			<div id="profile">
 				<img src="__PUBLIC__/img/user.png" width="64" height="64" alt="User name" class="user-icon">
 				Hello
-				<span class="name">John <b>Doe</b></span>
+				<span class="name">{$name}</span>
 			</div>
 
 			<!-- By default, this section is made for 4 icons, see the doc to learn how to change this, in "basic markup explained" -->
